fix: Retorno de validaciones con metodos http correctos